Role Administrateur,Gestionnaire, Eleve,Professeur

--- a/templates/cours/show.html.twig
+++ b/templates/cours/show.html.twig
@@ -46,6 +46,12 @@
                 <td>{{ cour.jour.libelle }} 
                 </td>
             </tr>
+            <tr>
+                <th>local</th>
+                <td>{{ cour.locaux.nom }} 
+                </td>
+            </tr>
+            
         </tbody>
     </table>
 
