--- a/templates/gestionnaire/dashboard.html.twig
+++ b/templates/gestionnaire/dashboard.html.twig
@@ -2,7 +2,7 @@
     <div class="container">
         <h1 class="mt-4">
             {# Voici votre message de bienvenue ! #}
-            Bienvenue, {{ professeur.prenom }} {{ professeur.nom }} !
+            Bienvenue le Gestionnaire !
         </h1>
         
         <p>C'est votre tableau de bord personnel.</p>
