--- a/templates/contrat_pret/_delete_form.html.twig
+++ b/templates/contrat_pret/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_contrat_pret_delete', {'id': contrat_pret.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ contrat_pret.id) }}">
-    <button class="btn">Delete</button>
+<form method="post" action="{{ path('app_contrat_pret_delete', {'id': contratPret.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce contrat ?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ contratPret.id) }}">
+    <button class="btn btn-danger">Supprimer</button>
 </form>
